--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,4 +60,7 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0"
     implementation "androidx.compose.material:material-icons-extended:$compose_version"
+    //Navigation
+    def nav_version = "2.4.2"
+    implementation("androidx.navigation:navigation-compose:$nav_version")
 }
